test/spec_vectors/global/fail/module_31.wat
(module (import "spectest" "global_i32" (global i32)) (func (result i32) (global.get 1)))